fixed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@ body{
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
